--- a/compscix-415-2-assignments/Session1/homework_1_girdhar_gaurav.Rmd
+++ b/compscix-415-2-assignments/Session1/homework_1_girdhar_gaurav.Rmd
@@ -9,22 +9,47 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+My Github repository for my assignments can be found at this URL: https://github.com/ggirdhar28/compscix-415-2-assignments.git
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+```{r load_packages, warning=FALSE, message=FALSE}
+library(mdsr)
+library(tidyverse)
 ```
 
-## Including Plots
+Loading Data
 
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r}
+data("WorldCities")
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+QUESTION 1: How many observations and variables are there in this data set? What are some of the variable names? Type up your answer in your document using complete sentences.
+
+ANSWER1: There are 23,018 Observations and 10 variable in this data set. Some of the Variable Names are as below:
+
+a) Code
+b) Name
+c) Latitude
+d) Longitude
+e) Country
+f) Country Region
+
+```{r}
+glimpse(WorldCities)
+```
+
+```{r}
+WorldCities <- head(WorldCities, 200) # 200 rows
+```
+```{r}
+country_col <- WorldCities$country
+```
+```{r}
+unique(country_col)
+```
+QUESTION 2: There is a column called region in the data set. Can you extract this and show only the unique values?
+```{r}
+region_col <- WorldCities$region
+```
+```{r}
+unique(region_col)
+```
