Completed The First HomeWork

--- a/compscix-415-2-assignments/Session1/homework_1_girdhar_gaurav.Rmd
+++ b/compscix-415-2-assignments/Session1/homework_1_girdhar_gaurav.Rmd
@@ -53,3 +53,30 @@ region_col <- WorldCities$region
 ```{r}
 unique(region_col)
 ```
+QUESTION 3: Can you extract and show the unique entries from the country column in WorldCities using one line of code and two %>% operators? The output will look like this:
+# Getting Error with Temp Name - 
+#```{r}
+#country_col1 <- WorldCities %>% select(country)
+#country_col %>% unique()
+#```
+```{r}
+WorldCities %>% ggplot(aes(x = population)) + 
+  geom_histogram()
+```
+
+```{r}
+WorldCities %>% ggplot(aes(x = population)) + 
+  geom_histogram() + 
+  xlab('City Population')
+```
+QUESTION 4: Make one more histogram of the population and add a new x-label, a new y-label, a new title (use ggtitle('my title')), and change the theme of the plot using theme_bw().
+```{r}
+WorldCities %>% ggplot(aes(x = population)) + 
+  geom_histogram() + 
+  xlab('City Population') +
+  ylab('Count in Million') +
+  ggtitle('FirstHomeWork') +
+  theme_bw()
+
+```
+
